--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+- silence profile deprecation warnings; pkgcore mod, but noting it here since
+  it's bit more relevant to pcheck
 - rework filter-env so it dumps a struct representing the parsing instead of
   doing it inline; add python bindings, use that for source flow analysis
 - look into trying to identify unused functions in an ebuild; eclasses, and 
