--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+- tests (dar)
+- expand config options so that --disable is supported for checks.
+- add reports profile; basically, pre configured checks stored in user
+  configuration.
 - silence profile deprecation warnings; pkgcore mod, but noting it here since
   it's bit more relevant to pcheck
 - rework filter-env so it dumps a struct representing the parsing instead of
