Move the suite and checkset classes from the pcheck to the base module.

--- a/README
+++ b/README
@@ -45,7 +45,7 @@ it is used. So with the following suite definition in
 ``~/.pkgcore.conf``::
 
   [pcheck-portdir-suite]
-  class=pkgcore_checks.pcheck.Suite
+  class=pkgcore_checks.base.Suite
   target_repo=portdir
 
 you can run ``pcheck`` with no further arguments inside your portage
@@ -54,7 +54,7 @@ directory and it will do the right thing.
 For use with overlays you need to define the "source" repo too::
 
   [pcheck-overlay-suite]
-  class=pkgcore_checks.pcheck.Suite
+  class=pkgcore_checks.base.Suite
   target_repo=/usr/local/portage/private
   src_repo=portdir
 
@@ -66,7 +66,7 @@ See Overlays_ for more information on ``src_repo``.
 Finally, you can define a different checkset per suite::
 
   [pcheck-portdir-suite]
-  class=pkgcore_checks.pcheck.Suite
+  class=pkgcore_checks.base.Suite
   target_repo=portdir
   inherit=no-arch-checkset
 
@@ -87,11 +87,11 @@ checks and one running every available check except for the specified
 ones. Examples::
 
   [no-arch-checks]
-  class=pkgcore_checks.pcheck.Blacklist
+  class=pkgcore_checks.base.Blacklist
   patterns=unstable_only stale_unstable imlate
 
   [only-arch-checks]
-  class=pkgcore_checks.pcheck.Blacklist
+  class=pkgcore_checks.base.Blacklist
   patterns=unstable_only stale_unstable imlate
 
 The first disables the three specified checks, the second enables only
@@ -130,7 +130,7 @@ grep. To use an output format that prints everything on one line, put
 this in your configuration::
 
   [pcheck-plain-reporter]
-  class=pkgcore_checks.base.plain_reporter
+  class=pkgcore_checks.reporters.plain_reporter
   default=true
 
 To use a non-default reporter use ``pcheck --reporter``. To see the
