--- a/README
+++ b/README
@@ -6,9 +6,9 @@ Dependencies
 ============
 
 pkgcore-checks is developed alongside pkgcore. To run the development
-version of pkgcore-checks you will probably need the development
-version of pkgcore, and to run pkgcore-checks 0.x.y you will probably
-need pkgcore 0.x.y with the same value of x.
+version of pkgcore-checks you will need the development version of
+pkgcore.
+Otherwise the 0.x version numbers need to match.
 
 The metadata.xml checks require either xmllint (installed as part of
 libxml2) or the python bindings to libxml2 (installed as part of
