add __attrs__; list of attrs to use for pickling, else fallback to __slots__ (old behaviour was slots alone), update metadata_xml Results so they're properly pickled. Finally, add protection for __setstate__ to ensure the state data is usable

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ See ChangeLog for full commit logs; this is summarized and major changes.
 
 * update to use snakeoil api.
 
+* addition of __attrs__ to base.Result classes; use this if __slots__ doesn't
+  suffice for listing the attrs to pickle.
+
 
 0.3.4:
 
