pull in my branch; fixup checks (and drop 55% of the runtime on) insinto checks, temporarily ref profiles as they're being added to allow inst caching to do it's job, thus knocking 1800 file reads down into 100 for full profile loadup, and misc serialization related fixes

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,13 @@ See ChangeLog for full commit logs; this is summarized and major changes.
 
 * ticket 82; Fix BadProto result object so it has proper threshold.
 
+* Fix class serialization bug in RestrictsReport.
+
+* profile loadup optimization; pkgcore weakly caches the intermediate nodes,
+  pcheck's profile loadup however specifically released the profiles every
+  looping; now it temporarily holds onto it, thus allowing the caching to kick
+  in.  Among other things, cuts file reads down from 1800 to around around 146.
+
 
 0.3.5:
 
