--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,15 @@ pkgcore-checks Release Notes
 
 See ChangeLog for full commit logs; this is summarized and major changes.
 
+0.4.1:
+
+* fixed ticket 90; NonExistantDeps occasionally wouldn't report later versions
+  of an offender.
+
+* --disable-arches option; way to specifically disable an arch (blacklisting)
+  instead of having to specify all arches.
+
+
 0.4:
 
 * update to use snakeoil api.
