--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,17 @@ pkgcore-checks Release Notes
 See ChangeLog for full commit logs; this is summarized and major changes.
 
 
+* 0.4.12: December 27th, 2009
+
+* corner case import error in metadata_xml scan for py3k is now fixed; if
+  you saw urllib.urlopen complaints, this is fixed.
+
+* >snakeoil-0.3.4 is now required for sdist generation.
+
+* visibility scans now use 22% less memory (around 130MB on python2.6 x86_64)
+  and is about 3% faster.
+
+
 0.4.11: December 20th, 2009
 
 * minor speedup in visibility scans- about 3% faster now.
