--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ pkgcore-checks Release Notes
 See ChangeLog for full commit logs; this is summarized and major changes.
 
 
+pkgcore-checks 0.4.13: January 8th, 2010
+
 * fix to use dep scanning in visibility where it was missing use deps that
   can never be satisfied for a specific profile due to use masking/forcing.
 
@@ -17,7 +19,7 @@ See ChangeLog for full commit logs; this is summarized and major changes.
 * added a null reporter for performance testing.
 
 
-* 0.4.12: December 27th, 2009
+pkgcore-checks 0.4.12: December 27th, 2009
 
 * corner case import error in metadata_xml scan for py3k is now fixed; if
   you saw urllib.urlopen complaints, this is fixed.
@@ -28,7 +30,7 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   and is about 3% faster.
 
 
-0.4.11: December 20th, 2009
+pkgcore-checks 0.4.11: December 20th, 2009
 
 * minor speedup in visibility scans- about 3% faster now.
 
@@ -39,33 +41,33 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   matches.
 
 
-0.4.10: December 14th, 2009
+pkgcore-checks 0.4.10: December 14th, 2009
 
 * fix a bug where use deps on metapkgs was invalidly being flagged.
 
 
-0.4.9: November 26th, 2009
+pkgcore-checks 0.4.9: November 26th, 2009
 
 * fix a bug in test running- bzr_verinfo isn't generated for pkgcore-checks
   in sdist (no need), yet build_py was trying to regenerate it.  Basically
   broke installation on machines that lacked bzr.
 
 
-0.4.8: November 26th, 2009
+pkgcore-checks 0.4.8: November 26th, 2009
 
 * experimental py3k support.
 
 * test runner improvements via depending on snakeoil.distutils_extensions.
 
 
-0.4.7: October 26, 2009
+pkgcore-checks 0.4.7: October 26, 2009
 
 * fix invalid flagging of use deps on PyQt4 for ia64; basically PyQt4[webkit]
   is valid due to a pkg level masked use reversal... the checking code however
   wasn't doing incremental expansion itself..  Same could occur for forced use.
 
 
-0.4.6: October 22, 2009
+pkgcore-checks 0.4.6: October 22, 2009
 
 * fix a bug in tristate use evaluation of potential USE combinations.
   Roughly, if a flag is masked *and* forced, the result is it's masked.
@@ -73,13 +75,13 @@ See ChangeLog for full commit logs; this is summarized and major changes.
 * compatibility fixes for pkgcore 0.5; 0.5 isn't required, but advised.
 
 
-0.4.5: November 7, 2008
+pkgcore-checks 0.4.5: November 7, 2008
 
 * verify whether or not a requested use state is actually viable when profile
   masking/forcing is taken into account.
 
 
-0.4.4: October 21, 2008
+pkgcore-checks 0.4.4: October 21, 2008
 
 * EAPI2 support for checking use/transitive use deps.
 
@@ -91,7 +93,7 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   enabled.
 
 
-0.4.3: March 18, 2008
+pkgcore-checks 0.4.3: March 18, 2008
 
 * ticket 8; false positive unused global USE flags due to not stripping '+-'
   from iuse defaults.
@@ -101,12 +103,12 @@ See ChangeLog for full commit logs; this is summarized and major changes.
 * dropped ModularXPortingReport; no longer needed.
 
 
-0.4.2: December 15, 2007
+pkgcore-checks 0.4.2: December 15, 2007
 
 * minor release to be EAPI=1 compatible wrt IUSE defaults
 
 
-0.4.1: July 16, 2007
+pkgcore-checks 0.4.1: July 16, 2007
 
 * fixed ticket 90; NonExistantDeps occasionally wouldn't report later versions
   of an offender.
@@ -115,7 +117,7 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   instead of having to specify all arches.
 
 
-0.4: June 6, 2007
+pkgcore-checks 0.4: June 6, 2007
 
 * update to use snakeoil api.
 
@@ -132,7 +134,7 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   in.  Among other things, cuts file reads down from 1800 to around around 146.
 
 
-0.3.5:
+pkgcore-checks 0.3.5:
 
 * addition of __attrs__ to base.Result classes; use this if __slots__ doesn't
   suffice for listing the attrs to pickle.
@@ -144,12 +146,12 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   1.12: x86 ~amd64
 
 
-0.3.4:
+pkgcore-checks 0.3.4:
 
 * treat pkg.restrict as a depset.
 
 
-0.3.3:
+pkgcore-checks 0.3.3:
 
 * drop digest specific checks; portage now prunes digests on sync regardless
   of whether or not the repo is m2 pure; thus, no way to detect if a missing
@@ -166,19 +168,19 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   logic into base class.
 
 
-0.3.2:
+pkgcore-checks 0.3.2:
 
 * correct tracebacks when dealing with a few result objects from repo_metadata
 
 
-0.3.1:
+pkgcore-checks 0.3.1:
 
 * makes StaleUnstable abide by --arches; ticket 59 (thanks leio).
 * stop complaining about empty keywords, since they're now allowed instead of
   using -*.
 
 
-0.3:
+pkgcore-checks 0.3:
 
 * heavy refactoring of reporter subsystem, and clean up of check results.
   Better messages, better output for normal usage.  to_xml() methods were
@@ -195,7 +197,7 @@ See ChangeLog for full commit logs; this is summarized and major changes.
   alternative reporters.
 
 
-0.2:
+pkgcore-checks 0.2:
 
 * invocation args have changed- please see readme for details of how to
   use pcheck.
@@ -215,5 +217,5 @@ See ChangeLog for full commit logs; this is summarized and major changes.
 * whitespace checks.
 
 
-0.1:
+pkgcore-checks 0.1:
 * inital release
