--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ pkgcore-checks Release Notes
 See ChangeLog for full commit logs; this is summarized and major changes.
 
 
+* cleanup of deprecated api usage.
+
+
 pkgcore-checks 0.4.14: April 24th, 2011
 
 * Updated compatibility w/ recent snakeoil/pkgcore changes.
