--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ pkgcore-checks Release Notes
 
 See ChangeLog for full commit logs; this is summarized and major changes.
 
+* Add check for deprecated EAPIs.
 
 * Conflicting manifests chksums scanning was added.
 
