--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
-pkgcore-checks Release Notes
-============================
+=============
+Release Notes
+=============
 
 See ChangeLog for full commit logs; this is summarized and major changes.
 
