--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 - back out package.provided hack in visibility, fix start prototype
 - tests (dar)
 - silence profile deprecation warnings; pkgcore mod, but noting it here since
-  it's bit more relevant to pcheck
+  it's bit more relevant to pkgcheck
 - rework filter-env so it dumps a struct representing the parsing instead of
   doing it inline; add python bindings, use that for source flow analysis
 - look into trying to identify unused functions in an ebuild; eclasses, and
